--- a/config/buildings.yml
+++ b/config/buildings.yml
@@ -1,59 +1,59 @@
 :archer_tower:
-  :damage: 5,
-  :range: 5,
-  :max_range: 10,
-  :speed: 3,
-  :bullet_speed: 6,
-  :life: 100,
-  :shield: 50,
+  :damage: 5
+  :range: 5
+  :max_range: 10
+  :speed: 3
+  :bullet_speed: 6
+  :life: 100
+  :shield: 50
   :cost: 100
 :cannon:
-  :damage: 12,
-  :range: 4,
-  :max_range: 8,
-  :speed: 2,
-  :bullet_speed: 6,
-  :life: 100,
-  :shield: 100,
+  :damage: 12
+  :range: 4
+  :max_range: 8
+  :speed: 2
+  :bullet_speed: 6
+  :life: 100
+  :shield: 100
   :cost: 300
 :wizard_tower:
-  :damage: 30,
-  :range: 3,
-  :max_range: 5,
-  :speed: 3,
-  :bullet_speed: 5,
-  :life: 100,
-  :shield: 200,
+  :damage: 30
+  :range: 3
+  :max_range: 5
+  :speed: 3
+  :bullet_speed: 5
+  :life: 100
+  :shield: 200
   :cost: 800
 :tesla:
-  :damage: 25,
-  :range: 6,
-  :max_range: 10,
-  :speed: 20,
-  :life: 100,
-  :shield: 100,
+  :damage: 25
+  :range: 6
+  :max_range: 10
+  :speed: 20
+  :life: 100
+  :shield: 100
   :cost: 2000
 :monster_spawner:
-  :damage: 0,
-  :range: 0,
-  :speed: 0,
-  :bullet_speed: 0,
-  :life: 100,
-  :shield: 0,
+  :damage: 0
+  :range: 0
+  :speed: 0
+  :bullet_speed: 0
+  :life: 100
+  :shield: 0
   :cost: 0
 :defending_city:
-  :damage: 0,
-  :range: 0,
-  :speed: 0,
-  :bullet_speed: 0,
-  :life: 100,
-  :shield: 0,
+  :damage: 0
+  :range: 0
+  :speed: 0
+  :bullet_speed: 0
+  :life: 100
+  :shield: 0
   :cost: 0
 :wall:
-  :damage: 0,
-  :range: 0,
-  :speed: 0,
-  :bullet_speed: 0,
-  :life: 100,
-  :shield: 500,
+  :damage: 0
+  :range: 0
+  :speed: 0
+  :bullet_speed: 0
+  :life: 100
+  :shield: 500
   :cost: 5
