--- a/config/environment.yml
+++ b/config/environment.yml
@@ -1,10 +1,9 @@
 :environment: :production
-:width: 740
-:height: 580
+:width: 1900
+:height: 1080
 :full_screen: false
 :window_title: Defender
-:tile_size: 32
+:tile_size: 64
 :screen_padding: 32
-:sprite_width: 32
-:sprite_height: 48
-:sprite_tileable: false
+:health_bar_height: 16
+:health_bar_padding: 2
