--- a/config/monsters.yml
+++ b/config/monsters.yml
@@ -1,55 +1,54 @@
 :weak_1:
-  :speed: 3
-  :max_speed: 10
+  :speed: 0.2
   :life: 50
   :damage: 1
   :shield: 0
   :money: 5
 :weak_2:
-  :speed: 6
-  :max_speed: 20
+  :speed: 0.4
   :life: 50
   :damage: 2
   :shield: 1
+  :money: 5
 :quick_1:
-  :speed: 12
-  :max_speed: 30
+  :speed: 1.0
   :life: 50
   :damage: 3
   :shield: 1
+  :money: 5
 :big_hp:
-  :speed: 5
-  :max_speed: 10
+  :speed: 0.2
   :life: 500
   :damage: 3
   :shield: 1
+  :money: 15
 :big_shield:
-  :speed: 5
-  :max_speed: 10
+  :speed: 0.4
   :life: 50
   :damage: 3
   :shield: 20
+  :money: 15
 :big_damage:
-  :speed: 7
-  :max_speed: 14
+  :speed: 0.7
   :life: 50
   :damage: 10
   :shield: 2
+  :money: 10
 :quick_big_hp:
-  :speed: 15
-  :max_speed: 30
+  :speed: 1.0
   :life: 100
   :damage: 3
   :shield: 3
+  :money: 20
 :quick_2:
-  :speed: 30
-  :max_speed: 40
+  :speed: 1.4
   :life: 30
   :damage: 4
   :shield: 1
+  :money: 5
 :big_hp_shield:
-  :speed: 3
-  :max_speed: 10
+  :speed: 0.2
   :life: 300
   :damage: 5
   :shield: 15
+  :money: 15
